[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orca_solana_sdk"
version = "0.0.1"
authors = [
  { name="Monocarpic", email="monocarpicfinance@gmail.com" },
]
description = "Unofficial port of the Orca Typescript SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/Monocarpic/orca_solana_sdk"
"Bug Tracker" = "https://github.com/Monocarpic/orca_solana_sdk/issues"